--- a/pages/password/password.wxml
+++ b/pages/password/password.wxml
@@ -1,7 +1,11 @@
 <!--设置密码-->
 <form bindsubmit="formSubmit" bindreset="formReset">
 <view  class=''>
+<view>
     <input name="harvester" placeholder="请设置6位支付密码" type="password" />
+    <image class="" src="img/" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+</view>
+  
     <input name="harvester_phone_num" placeholder="请再次输入支付密码"  type="password" />
     <view >
        <button form-type="submit" class="btn-area" >确定</button>
