--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -58,12 +58,10 @@
             cursor-spacing="15"
             auto-height="true"
             focus="{{releaseFocus}}"
-            placeholder="" bindinput="bindinput">{{repay_content}}</textarea>
+            placeholder="" bindinput="bindinput" value="{{repay_content}}">{{repay_content}}</textarea>
             <view class="submit" bindtap='comments'>发送</view>
             <view class="submit" bindtap='close'>取消</view>
             </view>
-       
-        
    </view>
 </view>
 
