--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -40,7 +40,7 @@
 						<view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}"> ￥{{item.grade_price}}/片</view>
 						<view class='unit-price-p text_red' wx:else> ￥{{item.grade_price}}/片</view>
 					</view>
-					<view class='quantity-p text_red'>×{{item.number}}</view>
+					<view class='quantity-p text_red'>×{{num}}</view>
 				</view>
 			</view>
 			
@@ -164,7 +164,7 @@
 		</view>
 		<view class='sundry-li'>
 			<view class='text_red'>优惠券</view>
-				<view wx:if="{{coupon_show==1}}"><text style='color:#FF7E4A;'>有可适用优惠券</text></view>
+				<view wx:if="{{coupon_show==1}}" ><text style='color:#FF7E4A;' >有可适用优惠券</text></view>
 			<view wx:else><text style='color:#FF7E4A;'>无可适用优惠券</text></view>
 		</view>
 		<view class='sundry-li'>
