--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -61,6 +61,8 @@ font-size: 26rpx;
   width: 670rpx;
   display: flex;
   justify-content: space-between;
+  border-bottom:solid 3px #F2F2F2;
+
 }
 .good_infor{
   width: 500rpx;
