--- a/app.wxss
+++ b/app.wxss
@@ -64,8 +64,8 @@ overflow:hidden;
 }
 radio .wx-radio-input.wx-radio-input-checked::before{
    border-radius: 50%;
-   width: 20rpx; 
-   height: 20rpx; 
+   width: 16rpx; 
+   height: 16rpx; 
    text-align: center;
    font-size:0rpx; /* 对勾大小 去掉 */
    background-color: #02A0E6; 
@@ -74,15 +74,16 @@ radio .wx-radio-input.wx-radio-input-checked::before{
 }
 radio{
   border-radius: 50%;
-  width: 40rpx;/* 最好是4的倍数，不然会不在中间 */
-  height: 40rpx;
+  width: 32rpx;/* 最好是4的倍数，不然会不在中间 */
+  height: 32rpx;
   border: 2rpx solid #C4C4C4;/* 设置边框（外圆） */
   font-size: 0;/* 让边框重合 */
+  overflow: hidden;
 }
 radio .wx-radio-input{
    border-radius: 50%;
-   width: 40rpx;
-   height: 40rpx; 
+   width: 32rpx;
+   height: 32rpx; 
    border: none;/* 替换边框（隐藏原有边框） */
 }
 .all{
@@ -92,8 +93,8 @@ radio .wx-radio-input{
 /* 未选中的 背景样式 */
 checkbox .wx-checkbox-input{
    border-radius: 50%;/* 圆角 */
-   width: 40rpx; /* 背景的宽 */
-   height: 40rpx; /* 背景的高 */
+   width: 32rpx; /* 背景的宽 */
+   height: 32rpx; /* 背景的高 */
 }
 /* 选中后的 背景样式 （红色背景 无边框 可根据UI需求自己修改） */
 checkbox .wx-checkbox-input.wx-checkbox-input-checked{
@@ -103,9 +104,9 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked{
 /* 选中后的 对勾样式 （白色对勾 可根据UI需求自己修改） */
 checkbox .wx-checkbox-input.wx-checkbox-input-checked::before{
    border-radius: 50%;/* 圆角 */
-   width: 40rpx;/* 选中后对勾大小，不要超过背景的尺寸 */
-   height: 40rpx;/* 选中后对勾大小，不要超过背景的尺寸 */
-   line-height: 40rpx;
+   width: 32rpx;/* 选中后对勾大小，不要超过背景的尺寸 */
+   height: 32rpx;/* 选中后对勾大小，不要超过背景的尺寸 */
+   line-height: 32rpx;
    text-align: center;
    font-size:30rpx; /* 对勾大小 30rpx */
    color:#fff; /* 对勾颜色 白色 */
