--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -1,6 +1,6 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
-	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}" >
+	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" >
 		<view class='content_list' wx:for='{{address}}'>
 			<view class='radio' >
 				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" />
@@ -15,15 +15,17 @@
 					{{item.address_name}}{{item.harvester_real_address}}
 				</view>
 			</view>
-			<view>
-				<view class='default' data-id="{{item.id}}" >
-				<checkbox-group >
-				  <checkbox value="设为默认" />设为默认
-				</checkbox-group>
-			</view>
-			<view class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address">
-				<image src='img/u9386.png'></image>
-			</view>
+			<view class="list3">
+				<view class='default'  >
+					<checkbox-group  bindchange="checkboxChange" data-id="{{item.id}}">
+					<checkbox value="{{item.id}}" checked="{{item.checked==checked? 'true' : ''}}"/>设为默认
+					</checkbox-group>
+		     	</view>
+				
+					<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
+			
+					<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
+		     	
 			</view>
 			
 		</view>
