--- a/pages/evaluation/evaluation.wxml
+++ b/pages/evaluation/evaluation.wxml
@@ -1,8 +1,9 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
 <view class="all" style='height:{{height}}px;'>
+<view wx:for="{{goods}}">
     <view class="good_infor">
-        <image class="good_img" src="../../images/u1222.png" mode="widthFix" ></image>
-          <text class="good_name">商品名称</text>  
+        <image class="good_img" src="{{url}}{{item.goods_image}}" mode="widthFix" ></image>
+          <text class="good_name">{{item.parts_goods_name}}</text>  
     </view>
    
     <view class="reason">
@@ -15,6 +16,7 @@
           </view>
           <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}"> </image>
     </view>
+ </view>
     <view class="btn-area">
         <button form-type="submit" class='button-hovers' bindtap="aaa">提交</button>
     </view>
