--- a/pages/evaluation/evaluation.wxml
+++ b/pages/evaluation/evaluation.wxml
@@ -1,23 +1,26 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
 <view class="all" style='height:{{height}}px;'>
-<view wx:for="{{goods}}">
-    <view class="good_infor">
-        <image class="good_img" src="{{url}}{{item.goods_image}}" mode="widthFix" ></image>
-          <text class="good_name">{{item.parts_goods_name}}</text>  
+
+  <form  bindsubmit="formSubmit" bindreset="formReset">
+    <view wx:for="{{goods}}" class="good_content">
+        <view class="good_infor">
+            <image class="good_img" src="{{url}}{{item.goods_image}}" mode="widthFix" ></image>
+            <text class="good_name">{{item.parts_goods_name}}</text>  
+        </view>
+        <view class="reason">
+            <textarea name="aaa_{{item.id}}" id="" class="reason_content" placeholder="期待您的好评，您的好评还能获得相应积分哟~"></textarea>
+        </view>
+        <view class="uplode_img">
+            <view class="imgcontent" wx:for="{{item.img}}">
+                <image class="" src="{{item}}" mode="widthFix" lazy-load="false"  class="imgs"> </image>
+                <image class="" src="../../images/a7.png" mode="widthFix" lazy-load="false"  class="delect_img"> </image>
+            </view>
+            <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}" data-id="{{item.id}}"> </image>
+        </view>
     </view>
-   
-    <view class="reason">
-        <textarea name="" id="" class="reason_content" placeholder="期待您的好评，您的好评还能获得相应积分哟~"></textarea>
-    </view>
-    <view class="uplode_img">
-          <view class="imgcontent" wx:for="{{img}}">
-              <image class="" src="{{item}}" mode="widthFix" lazy-load="false"  class="imgs"> </image>
-              <image class="" src="../../images/a7.png" mode="widthFix" lazy-load="false"  class="delect_img"> </image>
-          </view>
-          <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}"> </image>
-    </view>
- </view>
     <view class="btn-area">
-        <button form-type="submit" class='button-hovers' bindtap="aaa">提交</button>
+        <button formType="submit" class='button-hovers'>提交</button>
     </view>
+
+  </form>
 </view>
