--- a/pages/evaluation/evaluation.wxml
+++ b/pages/evaluation/evaluation.wxml
@@ -1,7 +1,7 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
 <view class="all" style='height:{{height}}px;'>
 
-  <form  bindsubmit="formSubmit" bindreset="formReset">
+  <form  bindsubmit="formSubmit" bindreset="formReset" content-type="multipart/form-data">
     <view wx:for="{{goods}}" class="good_content">
         <view class="good_infor">
             <image class="good_img" src="{{url}}{{item.goods_image}}" mode="widthFix" ></image>
