--- a/pages/evaluation/evaluation.wxss
+++ b/pages/evaluation/evaluation.wxss
@@ -86,7 +86,7 @@
    line-height: 100rpx;
    }
 
-view .good_content:last-child{
+.good_content:last-child{
        /* margin-bottom: 100rpx; */
        background:#ff0000;
    }
