--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -7,13 +7,13 @@
 		<view class="title_list {{tab==5? 'on' : ''}}" data-current="5" bindtap="tab_click">待评价</view>
 	</view>
 	<view class='content'>
-		<view class='order_list' wx:for="{{order}}">
+		<view class='order_list' wx:for="{{order}}"  bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
 			<view wx:if="{{item.status==1}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one'  >
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>等待买家付款</view>
 				</view>
-				<view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+				<view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -40,11 +40,11 @@
 				</view>
 			</view>
 			<view wx:elif="{{item.status==2 || item.status==3}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one' >
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>买家已付款</view>
 				</view>
-			    <view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+			    <view class='box_list_two' wx:for="{{item.info}}">
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -70,11 +70,11 @@
 				</view>
 			</view>
 			<view wx:elif="{{item.status==4 || item.status==5}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one' >
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>卖家已发货</view>
 				</view>
-			  <view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+			  <view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -101,11 +101,11 @@
 				</view>
 			</view>
 			<view wx:elif="{{item.status==6 || item.status==7}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one' >
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>交易成功</view>
 				</view>
-			  <view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+			  <view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -132,11 +132,11 @@
 				</view>
 			</view>
 			<view wx:elif="{{item.status==0 || item.status==9 || item.status==10}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one'>
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>交易成功</view>
 				</view>
-				<view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+				<view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -162,11 +162,11 @@
 				</view>
 			</view>
 			<view wx:elif="{{item.status==8}}">
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one'>
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>交易成功</view>
 				</view>
-				<view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+				<view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
@@ -192,11 +192,11 @@
 				</view>
 			</view>
 			<view wx:else>
-				<view class='box_list_one' bindtap="go_order_detail">
+				<view class='box_list_one' >
 					<view>订单编号：{{item.parts_order_number}} </view>
 					<view class='static'>交易关闭</view>
 				</view>
-				<view class='box_list_two' wx:for="{{item.info}}" bindtap="go_order_detail">
+				<view class='box_list_two' wx:for="{{item.info}}" >
 					<view class='img'>
 						<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
 					</view>
