--- a/pages/identity_authentication/identity_authentication.wxml
+++ b/pages/identity_authentication/identity_authentication.wxml
@@ -23,17 +23,17 @@
         <view class='list_a'>
         <view class="section section_top">
             <view class="section_title">姓名</view>
-            <input name="harvester" placeholder="请输入真实姓名" value="" />
+            <input name="harvester" placeholder="请输入真实姓名" value="{{info.ID_card}}" />
           </view>
           <view class="section">
             <view class="section_title">身份证号</view>
-            <input name="harvester_phone_num" placeholder="请输入身份证号" value=""/>
+            <input name="harvester_phone_num" placeholder="请输入身份证号" value="{{info.member_real_name}}"/>
           </view>
           </view>
          
       
           <view class="btn-area">
-            <button form-type="submit" class='button-hovers' >提交</button>
+            <button form-type="submit" class='button-hovers' >修改</button>
           </view>
   </view>
 </form>
