--- a/pages/account/account.wxml
+++ b/pages/account/account.wxml
@@ -32,8 +32,8 @@
               <view class="box"  bindtap="go"  data-src="">
                 <image src="img/u9483.png"  class="ico" />
                 <text class="text">账单</text>
-              </view>
-                <view class="box"  bindtap="go"  data-src="">
+              </view >
+                <view class="box"   bindtap="go"  data-src="../integral_record/integral_record">
                 <image src="img/u9499.png"  class="ico" />
                 <text class="text">积分</text>
               </view>
