--- a/pages/add_card/add_card.wxml
+++ b/pages/add_card/add_card.wxml
@@ -4,20 +4,20 @@
         <view class='list_a'>
         <view class="section section_top">
             <view class="section_title">开户名</view>
-            <input name="harvester" placeholder=" 需要与绑定身份姓名一致"  value=""/>
+            <input name="name" placeholder=" 需要与绑定身份姓名一致"  value=""/>
           </view>
           <view class="section">
             <view class="section_title">开户银行</view>
-            <input name="harvester_phone_num" placeholder=" 请填写开户行及支行名称" value=""/>
+            <input name="card_name" placeholder=" 请填写开户行及支行名称" value=""/>
           </view>
             <view class="section section_top">
             <view class="section_title">银行卡号</view>
-            <input name="harvester" placeholder="   请输入完整卡号"  value=""/>
+            <input name="card_num" placeholder="   请输入完整卡号"  value=""/>
           </view>
           <view class="section">
             <view class="section_title">验证码</view>
             <input name="harvester_phone_num" placeholder="验证码发送到您绑定的手机号" value="" class="cold_input"/>
-            <view class="send_cold">获取验证码</view>
+            <view class="send_cold"  bindtap="send_cold">获取验证码</view>
           </view>
           </view>
         
