--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -2,7 +2,7 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
 	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}" >
-		<view class='content_list'>
+		<view class='content_list' wx:for="{{card}}">
 			<view class='radio'>
 				<radio value="" color='#fff' />
 			</view>
@@ -10,7 +10,10 @@
                 <view class="bank"><text class="bank_title">开户行：</text><text class="bank_content" >中国银行深圳分行</text></view>
                 <view class="bank_name"><text class="bank_title">开户名：</text><text class="bank_content" >刘德华</text></view>
                 <view class="card_num"><text class="bank_title">卡号：</text><text class="bank_content" >45677******66666</text> </view>
-              </view>
+      </view>
+					<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
+					<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
+		  
 		</view>
 	
 	</radio-group>
