--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -1,6 +1,6 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
-	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" >
+	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" bindchange="radioChange" data-id="{{item.id}}" >
 		<view class='content_list' wx:for='{{address}}'>
 			<view class='radio' >
 				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" />
@@ -16,11 +16,7 @@
 				</view>
 			</view>
 			<view class="list3">
-				<view class='default'  >
-					<checkbox-group  bindchange="checkboxChange" data-id="{{item.id}}">
-					<checkbox value="{{item.id}}" checked="{{item.checked==checked? 'true' : ''}}"/>设为默认
-					</checkbox-group>
-		     	</view>
+				
 				
 					<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
 			
